2011-11-14  Paul Smith  <psmith@gnu.org>

	* read.c (eval): parse_file_seq() might shorten the string due to
	backslash removal.  Start parsing again at the colon.
	Fixes Savannah bug #33399.

2011-11-13  Paul Smith  <psmith@gnu.org>

	* file.c (file_timestamp_cons): Match up data types to avoid warnings.
	* filedef.h: Ditto.
	* misc.c (concat): Ditto.
	* read.c (eval): Assign value to avoid warnings.
	* function.c (func_shell_base): Use fork() instead of vfork() to
	avoid warnings.
	* make.h (INTEGER_TYPE_SIGNED): Use <=0 to avoid warnings.
	Fixes Savannah bug #34608.

	* job.c (construct_command_argv): Remove _p.
	(construct_command_argv_internal): Remove _ptr.
	Fixes Savannah bug #32567.

	* main.c (clean_jobserver): Don't write the free token to the pipe.
	Change suggested by Tim Newsome <tnewsome@aristanetworks.com>

	* acinclude.m4 (AC_STRUCT_ST_MTIM_NSEC): Add support for Darwin.
	* filedef.h (FILE_TIMESTAMP_STAT_MODTIME): Ditto.
	Patch provided by Troy Runkel <Troy.Runkel@mathworks.com>

2011-10-11  Troy Runkel  <Troy.Runkel@mathworks.com>

	* config.h.W32: Enable job server support for Windows.
	* main.c [WINDOWS32]: Include sub_proc.h
	(main): Create a named semaphore to implement the job server.
	(clean_jobserver): Free the job server semaphore when make is finished.
	* job.c [WINDOWS32]: Define WAIT_NOHANG
	(reap_children): Support non-blocking wait for child processes.
	(free_child): Release job server semaphore when child process finished.
	(job_noop): Don't define function on Windows.
	(set_child_handler_action_flags): Don't define function on Windows.
	(new_job): Wait for job server semaphore or child process termination.
	(exec_command): Pass new parameters to process_wait_for_any.
	* w32/include/sub_proc.h [WINDOWS32]: New/updated EXTERN_DECL entries.
	* w32/subproc/sub_proc.c [WINDOWS32]: Added job server implementation.
	(open_jobserver_semaphore): Open existing job server semaphore by name.