@@ -301,17 +301,20 @@ if test "$make_cv_sa_restart" != no; then
      [Define to 1 if <signal.h> defines the SA_RESTART constant.])
 fi
 
-# enable make_cv_sa_restart for OS/2 so that the jobserver will be enabled,
-# but do it after HAVE_SA_RESTART has been defined.
-case "$host_os" in
-  os2*) make_cv_sa_restart=yes ;;
+# Only allow jobserver on systems that support it
+case "/$ac_cv_func_pipe/$ac_cv_func_sigaction/$make_cv_sa_restart/$has_wait_nohang/" in
+  */no/*) make_cv_job_server=no ;;
 esac
 
-case "$ac_cv_func_pipe/$ac_cv_func_sigaction/$make_cv_sa_restart/$has_wait_nohang/$make_cv_job_server" in
-  yes/yes/yes/yes/yes)
-    AC_DEFINE(MAKE_JOBSERVER, 1,
-              [Define to 1 to enable job server support in GNU make.]);;
+# Also supported on OS2 and W32
+case "$host_os" in
+  os2*|mingw32) make_cv_sa_restart=yes ;;
 esac
+
+if test "$make_cv_job_server" != no; then
+  AC_DEFINE(MAKE_JOBSERVER, 1,
+            [Define to 1 to enable job server support in GNU make.])
+fi
 
 # if we have both lstat() and readlink() then we can support symlink
 # timechecks.
